--- a/style.css
+++ b/style.css
@@ -29,3 +29,8 @@ padding: 5%;
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
