--- a/style.css
+++ b/style.css
@@ -34,3 +34,26 @@ padding: 5%;
     background-repeat: no-repeat;
     background-position: right;
 }
+.experience{
+    box-shadow: 10px 10px 30px gray;
+    padding: 10px 10px;
+    width: 50%;
+    margin: 30px;
+}
+.experi{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.exp{
+    padding-left: 20px;
+}
+#full{border-left: 7px solid;
+    border-image: linear-gradient(tomato, salmon); 
+    border-image-slice: 1; 
+}
+#baby{border-left: 7px solid;
+border-image: linear-gradient(blue, cyan); 
+border-image-slice: 1; 
+}
+footer p{text-align: center;}
